--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
-    "faker": "^4.1.0"
+    "faker": "^4.1.0",
+    "morgan": "^1.9.1"
   },
   "scripts": {
     "start": "node ./src/server.js",
